Fixing more style issues
	- Improved the gene-search and genes-list components so
	they look better on smartphones
	- Reduced the close icon for the mobile menu on the navbar
	- Added a bit of padding to the mobile menu
	- Fixed the transparent background of the mobile menu
	- Fixed the double scrollbar on the genes-list component
	page
	- Made the input element of the genes-list component to
	behave like the gene-search component one
	- Removed unused style code

--- a/src/app/core/help/help.component.scss
+++ b/src/app/core/help/help.component.scss
@@ -6,14 +6,6 @@
     margin-bottom: 2%;
 }
 
-.info-header {
-    padding-right: 5% !important;
-
-    > h1 {
-        text-align: center
-    }
-}
-
 .help-desc {
     position: relative;
     margin-bottom: 2%;
