--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -67,7 +67,7 @@ body {
     -webkit-font-smoothing: antialiased;
     font-size: 1em;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
     min-height: 100%;
 }
 
@@ -275,13 +275,20 @@ p-dialog {
     }
 }
 
+.ui-menu {
+    background-color: $background;
+}
+
+::selection {
+    background-color: transparent !important;
+    color: color(text, primary) !important;
+}
+
 .pointer {
     cursor: pointer;
 }
 
 .info-header {
-    padding-right: 5% !important;
-
     > h1 {
         text-align: center
     }
@@ -337,7 +344,6 @@ p-dialog {
     }
 
     .section {
-        margin-bottom: 43px;
         h1 {
             text-align: center;
         }
@@ -384,83 +390,106 @@ p-dialog {
         background-color: transparent;
         background: none;
         border: none;
-        padding-top: 1%;
-        padding-bottom: 1%;
+        padding-top: 0px;
+        padding-bottom: 0px;
         position: relative;
 
-        > input {
-            @include lato-font('normal');
+        .search-row {
+            display: block;
+            height: 63px;
 
             @include respond-to('ex-small') {
                 width: 100%;
-                padding-left: 2.5em;
+                margin-left: 0px;
             }
             @include respond-to('small') {
                 width: 100%;
-                padding-left: 4%;
+                margin-left: 0px;
             }
             @include respond-to('medium') {
-                width: 42%;
-                border-radius: 6px;
-                padding-left: 2%;
+                width: 60%;
+                margin: auto;
             }
             @include respond-to('large') {
-                width: 42%;
-                border-radius: 6px;
-                padding-left: 2%;
+                width: 40%;
+                margin: auto;
             }
             @include respond-to('ex-large') {
-                width: 42%;
-                border-radius: 6px;
-                padding-left: 2%;
+                width: 40%;
+                margin: auto;
+            }
+        }
+
+        .filter-wrapper {
+            display: flex;        /* IE < 10, Opera *Presto* Desktop (Now dead) */
+            justify-content: center;
+            text-align: left;
+            height: 63px;
+            flex-flow: column wrap;
+            position: relative;
+            width: 100%;
+
+            .italic-result {
+                > p {
+                    @include lato-font('normal', italic);
+                    color: color(italic-text, base) !important;
+                }
+
+                cursor: context-menu;
             }
 
-            height: 63px;
-            line-height: 63px;
-            box-shadow: inset 0px 0px 4px color(box-shadow);
-            text-align-last: left;
-            font-size: 16px;
-            border: 0px;
+            .italic-result:hover {
+                background: $background;
+            }
 
+            .input-text {
+                font-size: $font-size-xx-regular;
+                color: color(text, primary);
+            }
+        }
+
+        #keyword {
+            @include lato-font('normal');
+
+            resize: none;
+            width: 85%;
+            background: transparent;
+            line-height: 63px;
+            border-color: color(keyword, border-color);
+            border: 2px;
+
+            text-align: left;
+            text-align-last: left;
+            overflow: auto;
+
+            // Opera Mini workaround
+            outline-offset:-2px;
+            outline: none;
+
+            // Input placehold for search
+            :-moz-placeholder,
             ::-moz-placeholder,
             ::-ms-input-placeholder,
             ::-webkit-input-placeholder {
+                white-space:pre-line;
+                position:relative;
                 color: color(input-placeholder);
+                font-size: $font-size-x-small-odd;
             }
         }
 
-        i {
-            position: absolute;
-            z-index: 2;
-            color: $contrast-color;
-            width: 32px;
+        .keyword-wrapper:focus-within {
+            box-shadow: 0px 0px 4px 2px $secondary-background;
+            border-radius: 6px;
 
-            @include respond-to('ex-small') {
-                left: 84%;
-                top: 17%;
-            }
-            @include respond-to('small') {
-                left: 90.4%;
-                top: 18.0%;
-            }
-            @include respond-to('medium') {
-                left: 65.4%;
-                top: 17.0%;
-            }
-            @include respond-to('large') {
-                left: 66.4%;
-                top: 15.5%;
-            }
-            @include respond-to('ex-large') {
-                left: 67.2%;
-                top: 16.0%;
-            }
-
-            content: url("/assets/icon/search_icon.png") !important;
+            // Opera Mini workaround
+            outline-offset:-2px;
+            outline: none;
         }
 
         p {
-            margin-top: 35px;
+            margin-top: 25px;
+            margin-bottom: 20px;
             text-align: center;
         }
 
@@ -468,7 +497,16 @@ p-dialog {
             @include lato-font('bold');
 
             color: color(text, secondary);
-            margin-right: 20px;
+
+            @include respond-to('medium') {
+                margin-right: 20px;
+            }
+            @include respond-to('large') {
+                margin-right: 20px;
+            }
+            @include respond-to('ex-large') {
+                margin-right: 20px;
+            }
         }
     }
 
@@ -945,7 +983,52 @@ p-dialog {
     }
 }
 
-.linkstable{
+.keyword-wrapper {
+    display: flex;        /* IE < 10, Opera *Presto* Desktop (Now dead) */
+    // justify-content: center;
+    text-align: left;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    z-index: 2;
+    padding-left: 5%;
+
+    background: $background;
+    box-shadow: inset 0px 0px 5px color(keyword, box-shadow);
+    border-radius: 6px;
+
+    .input-search-icon {
+        width: 15%;
+        vertical-align: middle;
+        margin: auto;
+
+        i {
+            @include respond-to('ex-small') {
+                width: 60%;
+            }
+            @include respond-to('small') {
+                width: 50%;
+            }
+            @include respond-to('medium') {
+                width: 45%;
+            }
+            @include respond-to('large') {
+                width: 40%;
+            }
+            @include respond-to('ex-large') {
+                width: 35%;
+            }
+
+            z-index: 2;
+            vertical-align: middle;
+            color: $contrast-color;
+            content: url("/assets/icon/search_icon.png") !important;
+        }
+    }
+}
+
+.linkstable {
+
     table {
         border-collapse: collapse;
     }
